version 1.3.0

    - create a new tier called felling 3 to include corners
    - completely refactor code in the felling subscriber (omg its so clean)
    - add support for IC2 rubber wood

version 1.2.3

    - fix serverside and clientside
    - add rarity setting

version 1.2

    - added enchantment book to creative
    - check for logWood in oredict instead
    - check for "axe" tool class, instead of tools that inherit ItemAxe
    - included basic configuration files
        - allow user to enable leaves in the algorithm
        - allow user to reduce the durability cost on tools
        - allow users to adjust the cost of leaves relative to logs

version 1.1

    - fixed a problem where it only checked for log1, meaning some trees wouldn't get cut
    - added a more advanced algorithm and Felling II that cuts in all directions
    - slightly more localization

version 1.0

    - basic enchantment with a simple upwards algorithm
    - basic localization